syntax = "proto3";

package logi.protocol;

import "google/protobuf/any.proto";

message Result {
    Code code = 1;
    enum Code {
        INVALID = 0;
        INVALID_ARG = -1;
        INVALID_DEVICE = -2;
        NO_SUCH_PATH = -3;
        CANCELLED = -4;
        NOT_IMPLEMENTED = -5;
        INVALID_VERB = -6;
        NOT_READY = -7;
        FAULTED = -8;
        UNREACHABLE = -9;
        UNAUTHORIZED = -10;
        DUPLICATE_NAME = -11;
        NOT_FOUND = -12;
        EXCEPTION = -13;
        CONFLICT = -14;
        SUCCESS = 1;
    }
    
    string what = 2;
}

message Message {
    string msg_id = 1;
    
    Verb verb = 2;
    enum Verb {
        INVALID = 0;
        GET = 1;
        SET = 2;
        BROADCAST = 3;
        REMOVE = 4;
        SUBSCRIBE = 5;
        UNSUBSCRIBE = 6;
        OPTIONS = 7;
    }
    
    string path = 3;
    string origin = 4;
    Result result = 5;
    google.protobuf.Any payload = 6;
}

message Routes {
    repeated Route route = 1;
    message Route {
        Message.Verb verb = 1;
        string path = 2;
        string payload = 3;
        string example_json = 4;
        string endpoint = 5;
    }
}

message RegistrationTokens {
    repeated uint32 tokens = 1;
}
