syntax = "proto3";

package logi.protocol.applications;

import "logi/protocol/util.proto";

message Command {
    string name = 1;
    string category = 2;
    string card_id = 3;
}

message Application {
    string database_id = 1;
    string name = 2;
    string bundle_id = 3;
    uint32 version = 4;
    string install_time = 5;
    string last_run_time = 6;
    string application_path = 7;
    string application_folder = 8;
    
    Game game = 9;
    message Game {
        Other other = 1;
        message Other {
            string id = 1;
        }
        
        Steam steam = 2;
        message Steam {
            string id = 1;
        }
        
        Blizzard blizzard = 3;
        message Blizzard {
            string id = 1;
        }
        
        Origin origin = 4;
        message Origin {
            string id = 1;
        }
        
        Uplay uplay = 5;
        message Uplay {
            string id = 1;
        }
        
        Epic epic = 6;
        message Epic {
            string id = 1;
        }
    }
    
    bytes poster = 10;
    bytes background = 11;
    bytes theme_music = 12;
    uint32 process_id = 13;
    uint32 session_id = 14;
    string command_line = 15;
    string application_id = 16;
    repeated Command commands = 17;
    repeated util.Color category_colors = 18;
    bool is_custom = 19;
    string poster_url = 20;
    string poster_title_position = 21;
    bool is_disabled = 22;
    bool is_installed = 23;
    repeated string user_paths = 24;
    string poster_path = 25;
}

message Event {
    Type type = 1;
    enum Type {
        INVALID = 0;
        APPLICATION_START = 1;
        APPLICATION_STOP = 2;
        APPLICATION_FOCUS = 3;
        APPLICATION_DISCOVERED = 4;
        SCAN_START = 5;
        SCAN_STOP = 6;
    }
    
    Application application = 2;
    string time = 3;
    string session_time = 4;
}

message Applications {
    repeated Application applications = 1;
}

message ApplicationId {
    string application_id = 1;
}

message ApplicationInfo {
    string application_id = 1;
    string name = 2;
    string poster_url = 3;
    string poster_title_position = 4;
}

message ApplicationInfos {
    repeated ApplicationInfo application_infos = 1;
}
